# palette

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
src/: cli.py  color.py  extract.py  image.py
